RESOLVED FIXED231034
GPU Process microphone attribution SPI adoption
https://bugs.webkit.org/show_bug.cgi?id=231034
Summary GPU Process microphone attribution SPI adoption
Kate Cheney
Reported 2021-09-30 12:27:51 PDT
GPU Process microphone attribution SPI adoption
Attachments
Patch (8.94 KB, patch)
2021-09-30 12:31 PDT, Kate Cheney
ews-feeder: commit-queue-
Patch (10.13 KB, patch)
2021-09-30 12:51 PDT, Kate Cheney
ews-feeder: commit-queue-
Patch (10.19 KB, patch)
2021-09-30 12:54 PDT, Kate Cheney
ews-feeder: commit-queue-
Patch (10.27 KB, patch)
2021-09-30 13:04 PDT, Kate Cheney
no flags
Patch (10.30 KB, patch)
2021-09-30 13:22 PDT, Kate Cheney
no flags
Build fix (1.51 KB, patch)
2021-10-03 13:58 PDT, David Kilzer (:ddkilzer)
ews-feeder: commit-queue-
Radar WebKit Bug Importer
Comment 1 2021-09-30 12:28:11 PDT
Kate Cheney
Comment 2 2021-09-30 12:31:45 PDT
Kate Cheney
Comment 3 2021-09-30 12:51:49 PDT
Kate Cheney
Comment 4 2021-09-30 12:54:49 PDT
Kate Cheney
Comment 5 2021-09-30 13:04:35 PDT
youenn fablet
Comment 6 2021-09-30 13:06:35 PDT
Comment on attachment 439775 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=439775&action=review > Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:455 > + gpuProcess().audioSessionManager().addProxy(*m_audioSessionProxy, *auditToken); We probably want to call addProxy even if there is no auditToken, how about passing a std::optional to addProxy?
Kate Cheney
Comment 7 2021-09-30 13:07:20 PDT
(In reply to youenn fablet from comment #6) > Comment on attachment 439775 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=439775&action=review > > > Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:455 > > + gpuProcess().audioSessionManager().addProxy(*m_audioSessionProxy, *auditToken); > > We probably want to call addProxy even if there is no auditToken, how about > passing a std::optional to addProxy? I thought about that. When will there be a case with no audit token?
Kate Cheney
Comment 8 2021-09-30 13:22:03 PDT
Kate Cheney
Comment 9 2021-10-01 10:39:33 PDT
failing mac-wk1 test is media related, but when I ran it locally I found that it failed with and without the patch. Letting EWS run once more but it seems unlikely that it is caused by the patch.
EWS
Comment 10 2021-10-01 13:32:50 PDT
Committed r283394 (242398@main): <https://commits.webkit.org/242398@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439777 [details].
Chris Dumez
Comment 11 2021-10-02 09:43:14 PDT
Seems to have broken the Open Source iOS build: /Volumes/Data/worker/ios-simulator-15-release/build/Source/WebCore/platform/audio/ios/AudioSessionIOS.mm:150:53: error: instance method '-setHostProcessAttribution:error:' not found (return type defaults to 'id') [-Werror,-Wobjc-method-access] [[PAL::getAVAudioSessionClass() sharedInstance] setHostProcessAttribution:@[ bundleProxy.bundleIdentifier ] error:&error];
Chris Dumez
Comment 12 2021-10-02 09:43:47 PDT
(In reply to Chris Dumez from comment #11) > Seems to have broken the Open Source iOS build: > /Volumes/Data/worker/ios-simulator-15-release/build/Source/WebCore/platform/ > audio/ios/AudioSessionIOS.mm:150:53: error: instance method > '-setHostProcessAttribution:error:' not found (return type defaults to 'id') > [-Werror,-Wobjc-method-access] > [[PAL::getAVAudioSessionClass() sharedInstance] > setHostProcessAttribution:@[ bundleProxy.bundleIdentifier ] error:&error]; https://build.webkit.org/#/builders/273/builds/95
Kate Cheney
Comment 13 2021-10-02 19:15:40 PDT
(In reply to Chris Dumez from comment #12) > (In reply to Chris Dumez from comment #11) > > Seems to have broken the Open Source iOS build: > > /Volumes/Data/worker/ios-simulator-15-release/build/Source/WebCore/platform/ > > audio/ios/AudioSessionIOS.mm:150:53: error: instance method > > '-setHostProcessAttribution:error:' not found (return type defaults to 'id') > > [-Werror,-Wobjc-method-access] > > [[PAL::getAVAudioSessionClass() sharedInstance] > > setHostProcessAttribution:@[ bundleProxy.bundleIdentifier ] error:&error]; > > https://build.webkit.org/#/builders/273/builds/95 I guess I could do something like: #if !USE(APPLE_INTERNAL_SDK) @interface AVAudioSession (Staging_80304064) - (BOOL)setHostProcessAttribution:(NSString *)bundleID error:(NSError **)outError; @end #endif Although I am not sure that is the right solution, maybe the bot just needs updating.
David Kilzer (:ddkilzer)
Comment 14 2021-10-03 13:58:00 PDT
Reopening to attach new patch.
David Kilzer (:ddkilzer)
Comment 15 2021-10-03 13:58:02 PDT
Created attachment 440015 [details] Build fix
David Kilzer (:ddkilzer)
Comment 16 2021-10-03 14:07:30 PDT
Comment on attachment 440015 [details] Build fix Waiting for ios-sim, ios-wk2, api-ios to go green. Note: api-ios test may fail due to Bug 230406, but I'm looking at that now.
David Kilzer (:ddkilzer)
Comment 17 2021-10-03 14:25:23 PDT
Comment on attachment 440015 [details] Build fix iOS build has gotten past the failure from the dashboard, so marking cq+.
EWS
Comment 18 2021-10-03 14:26:39 PDT
/Volumes/Data/worker/Commit-Queue/build/Source/WebCore/PAL/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
David Kilzer (:ddkilzer)
Comment 19 2021-10-03 14:30:09 PDT
(In reply to EWS from comment #10) > Committed r283394 (242398@main): <https://commits.webkit.org/242398@main> > > All reviewed patches have been landed. Closing bug and clearing flags on > attachment 439777 [details]. Landed build fix manually: Committed r283480: <https://trac.webkit.org/r283480>
Kate Cheney
Comment 20 2021-10-04 08:04:49 PDT
Thanks for fixing!
Note You need to log in before you can comment on or make changes to this bug.