Source/WebCore/PAL/pal/spi/cocoa/LaunchServicesSPI.h
@@ -55,6 +55,8 @@ WTF_EXTERN_C_END
 @end
 
 @interface LSBundleProxy : LSResourceProxy <NSSecureCoding>
++ (LSBundleProxy *)bundleProxyWithAuditToken:(audit_token_t)auditToken error:(NSError **)outError;
+@property (nonatomic, readonly) NSString *bundleIdentifier;
 @end
 
 #if HAVE(APP_LINKS)
